--- a/03_Design_Library/05_Observational_Causal/04_Regression_discontinuity.Rmd
+++ b/03_Design_Library/05_Observational_Causal/04_Regression_discontinuity.Rmd
@@ -1,34 +1,23 @@
+---
+title: "Regression Discontinuity"
+output: html_document
+bibliography: ../../bib/book.bib 
+---
+
+<!-- note do_bookdown is set in index.rmd, so we know if you're running just this .Rmd or compiling the book-->
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, cache = FALSE)
+knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file()) # files are all relative to RStudio project home
+```
+
+```{r, eval = !exists("do_bookdown"), echo = FALSE, include = FALSE, purl = FALSE}
+# load common packages, set ggplot ddtheme, etc.
+source("scripts/before_chapter_script.R")
+```
+
+<!-- start post here, do not edit above -->
 
 ## Regression Discontinuity
-
-```{r MIDA, echo = FALSE}
-# Model -------------------------------------------------------------------
-cutoff <- .5
-control <- function(X) {
-  as.vector(poly(X, 4, raw = T) %*% c(.7, -.8, .5, 1))}
-treatment <- function(X) {
-  as.vector(poly(X, 4, raw = T) %*% c(0, -1.5, .5, .8)) + .15}
-population <- declare_population(
-  N = 1000,
-  X = runif(N,0,1) - cutoff,
-  noise = rnorm(N,0,.1),
-  Z = 1 * (X > 0)
-)
-potential_outcomes <- declare_potential_outcomes(
-  Y ~ Z * treatment(X) + (1 - Z) * control(X) + noise)
-
-# Inquiry -----------------------------------------------------------------
-estimand <- declare_estimand(LATE = treatment(0) - control(0))
-
-# Answer Strategy ---------------------------------------------------------
-estimator <- declare_estimator(
-  formula = Y ~ poly(X, 4) * Z,
-  model = lm,
-  estimand = estimand)
-
-# Design ------------------------------------------------------------------
-rd_design <- population + potential_outcomes + estimand + declare_reveal() + estimator
-```
 
 Regression discontinuity designs exploit substantive knowledge that treatment is assigned in a particular way: everyone above a threshold is assigned to treatment and everyone below it is not. Even though researchers do not control the assignment, substantive knowledge about the threshold serves as a basis for a strong identification claim.
 
@@ -45,38 +34,89 @@ We'll consider an application of the regression discontinuity design that examin
     In our example, the running variable $X$ is the Democratic party's margin of victory at time $t-1$; and the treatment, $Z$, is whether the Democratic party won the election in time $t-1$. The outcome, $Y$, is the Democratic vote margin at time $t$. We'll consider a population of 1,000 of these pairs of elections.
     
     A major assumption required for regression discontinuity is that the conditional expectation functions for both treatment and control potential outcomes are continuous at the cutoff.^[An alternative motivation for some designs that do not rely on continuity at the cutoff is "local randomization".] To satisfy this assumption, we specify two smooth conditional expectation functions, one for each potential outcome. The figure plots $Y$ (the Democratic vote margin at time $t$) against $X$ (the margin at time $t-1$). We've also plotted the true conditional expectation functions for the treated and control potential outcomes. The solid lines correspond to the observed data and the dashed lines correspond to the unobserved data.
-    
+
+<!-- make sure to rename the section title below -->
+
+```{r regression_discontinuity, echo = FALSE, output = FALSE, purl = FALSE}
+# run the diagnosis (set to TRUE) on your computer for this section only before pushing to Github. no diagnosis will ever take place on github.
+do_diagnosis <- FALSE
+sims <- 100
+b_sims <- 20
+```
+
+```{r, echo = FALSE}
+# load packages for this section here. note many (DD, tidyverse) are already available, see scripts/package-list.R
+```
+
+
+```{r}
+cutoff <- .5
+control <- function(X) {
+  as.vector(poly(X, 4, raw = TRUE) %*% c(.7, -.8, .5, 1))}
+treatment <- function(X) {
+  as.vector(poly(X, 4, raw = TRUE) %*% c(0, -1.5, .5, .8)) + .15}
+
+rd_design <-
+  # Model -------------------------------------------------------------------
+declare_population(
+  N = 1000,
+  X = runif(N, 0, 1) - cutoff,
+  noise = rnorm(N, 0, .1),
+  Z = 1 * (X > 0)
+) +
+  declare_potential_outcomes(Y ~ Z * treatment(X) + (1 - Z) * control(X) + noise) +
+  
+  # Inquiry -----------------------------------------------------------------
+declare_estimand(LATE = treatment(0) - control(0)) +
+  
+  # Data Strategy -----------------------------------------------------------------
+declare_reveal(Y, Z) +
+  
+  # Answer Strategy ---------------------------------------------------------
+declare_estimator(formula = Y ~ poly(X, 4) * Z,
+                  model = lm_robust,
+                  estimand = "LATE")
+```
+
+
     
 ```{r,include=FALSE}
 mock_data <- draw_data(rd_design)
-X <- seq(-.5,.5,.005)
-treatment_frame <- data.frame(
-  X = X,
-  Y = treatment(X),
-  observed = ifelse(X > 0,"a","b"),
-  Z = 1
+X <- seq(-.5, .5, .005)
+treatment_frame <-
+  data.frame(
+    X = X,
+    Y = treatment(X),
+    observed = ifelse(X > 0, "a", "b"),
+    Z = 1
   )
-control_frame <- data.frame(
-  X = X,
-  Y = control(X),
-  observed = ifelse(X <= 0,"a","b"),
-  Z = 0
+control_frame <-
+  data.frame(
+    X = X,
+    Y = control(X),
+    observed = ifelse(X <= 0, "a", "b"),
+    Z = 0
   )
-plot_frame <- rbind(treatment_frame, control_frame)
+plot_frame <-
+  rbind(treatment_frame, control_frame)
 ```
 
 ```{r,echo=FALSE, warning=FALSE}
-ggplot(plot_frame,aes(x = X, y = Y, color = as.factor(Z))) + 
+ggplot(plot_frame, aes(x = X, y = Y, color = as.factor(Z))) +
   geom_line(aes(linetype = observed)) +
   geom_point(data = mock_data, alpha = .2, size = .5) +
-  scale_linetype_discrete(name = "", labels = c("Observable","Unobservable")) +
-#  scale_color_manual(name = "", labels = c("Untreated","Treated")) +
+  scale_linetype_discrete(name = "", labels = c("Observable", "Unobservable")) +
+  #  scale_color_manual(name = "", labels = c("Untreated","Treated")) +
   geom_vline(xintercept = 0, size = .05) +
-  xlab("Running Variable") + 
-  geom_segment(aes(x = 0,xend = 0, y = control(0),yend = treatment(0)),color = "black")# +
+  xlab("Running Variable") +
+  geom_segment(aes(
+    x = 0,
+    xend = 0,
+    y = control(0),
+    yend = treatment(0)
+  ), color = "black")# +
 #  dd_theme()
 ```
-
 
 - **I**nquiry: Our estimand is the effect of a Democratic win in an election on the Democratic vote margin of the next election, when the Democratic vote margin of the first election is zero. Formally, it is the difference in the conditional expectation functions of the control and treatment potential outcomes when the running variable is exactly zero. The black vertical line in the plot shows this difference.
 
@@ -84,42 +124,26 @@ ggplot(plot_frame,aes(x = X, y = Y, color = as.factor(Z))) +
 
 - **A**nswer strategy: We will approximate the treated and untreated conditional expectation functions to the left and right of the cutoff using a flexible regression specification estimated via OLS. In particular, we fit each regression using a fourth-order polynomial. Much of the literature on regression discontinuity designs focuses on the tradeoffs among answer strategies, with many analysts recommending against higher-order polynomial regression specifications. We use one here to highlight how well such an answer strategy does when it matches the functional form in the model. We discuss alternative estimators in the exercises. 
 
-```{r, eval = FALSE}
-# Model -------------------------------------------------------------------
-cutoff <- 0.5
-control <- function(X) {
-  as.vector(poly(X, 4, raw = T) %*% c(.7, -.8, .5, 1))}
-treatment <- function(X) {
-  as.vector(poly(X, 4, raw = T) %*% c(0, -1.5, .5, .8)) + .15}
-population <- declare_population(
-  N = 1000,
-  X = runif(N,0,1) - cutoff,
-  noise = rnorm(N,0,.1),
-  Z = 1 * (X > 0)
-)
-potential_outcomes <- declare_potential_outcomes(
-  Y_Z_0 = control(X) + noise,
-  Y_Z_1 = treatment(X) + noise)
+```{r, eval = do_diagnosis & !exists("do_bookdown")}
+rd_diagnosis <- diagnose_design(rd_design, sims = sims, bootstrap_sims = b_sims)
+```
 
-# Inquiry -----------------------------------------------------------------
-estimand <- declare_estimand(LATE = treatment(0) - control(0))
+```{r, echo = FALSE, purl = FALSE}
+# figure out where the dropbox path is, create the directory if it doesn't exist, and name the RDS file
+rds_file_path <- paste0(get_dropbox_path("regression_discontinuity"), "/rd_diagnosis.RDS")
+if (do_diagnosis & !exists("do_bookdown")) {
+  write_rds(rd_diagnosis, path = rds_file_path)
+}
+rd_diagnosis <- read_rds(rds_file_path)
+```
 
-# Answer Strategy ---------------------------------------------------------
-estimator <- declare_estimator(
-  formula = Y ~ poly(X, 4) * Z,
-  model = lm_robust,
-  estimand = estimand)
+Now all that simulating, saving, and loading is done, and we can use the simulations for whatever you want.
 
-# Design ------------------------------------------------------------------
-design <- population + potential_outcomes +
-  estimand + reveal_outcomes + estimator
+```{r}
+summary(rd_diagnosis)
 ```
 
 ### Takeaways 
-
-```{r, eval = FALSE, echo = TRUE}
-diagnosis <- diagnose_design(rd_design, sims = sims, bootstrap_sims = b_sims)
-```
 
 We highlight three takeaways. First, the power of this design is very low: with 1,000 units we do not achieve even 10\% statistical power. However, our estimates of the uncertainty are not too wide: the coverage probability indicates that our confidence intervals indeed contain the estimand 95\% of the time as they should. Our answer strategy is highly uncertain because the fourth-order polynomial specification in regression model gives weights to the data that greatly increase the variance of the estimator (@gelman2017high). In the exercises we explore alternative answer strategies that perform better.
   
@@ -144,7 +168,4 @@ Geographic regression discontinuity designs use distance to a border as the runn
 3. Reduce the number of polynomial terms of the the `treatment()` and `control()` functions and assess how the bias of the design changes as the potential outcomes become increasingly linear as a function of the running variable.
   
 4. Redefine the population function so that units with higher potential outcome are more likely to locate just above the cutoff than below it. Assess whether and how this affects the bias of the design.
-
-### References
-
 
